--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "gulp-header": "2.0.5",
     "gulp-rename": "1.3.0",
     "gulp-sass": "4.0.1",
-    "gulp-uglify": "3.0.0"
+    "gulp-uglify": "3.0.0",
+    "gulp-util": "^3.0.8",
+    "pump": "^3.0.0"
   }
 }
